--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <a href="https://www.instagram.com/polar_canvas/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/camila-pineda-33073318b/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="img/CV IT 2023.pdf" download class="btn btn2">Download CV</a>
+                    <a href="img/IT - Español.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <!--fix google sheets and sent message problems!!!!-->
