actualizacion del portfolio

--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="img/meahre.png" class="logo">
+                <img src="img/image.png" id="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#pet-projects">Projects</a></li>
+                    <!---<li><a href="#portfolio">Portfolio</a></li>-->
                     <li><a href="#contact">Contact</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i> <!--menu hamburguesa abierto-->
+                    <!--<i class="fa-solid fa-xmark" onclick="closemenu()"></i> menu hamburguesa abierto-->
 
                 </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i> <!---menu hamburguesa cerrado--->
+                <!---<i class="fa-solid fa-bars" onclick="openmenu()"></i> menu hamburguesa cerrado--->
             </nav>
             <div class="header-text">
-                <p>Front End Developer</p>
-                <h1>Hola, soy <span>Camila Pineda</span></h1>
+                <canvas id="canvas"></canvas> <!--animation canvas-->
+                <h1 id="welcome">hi,<span>camila</span> here.</h1>
+               
             </div>
         </div>
     </div>
@@ -37,37 +38,39 @@
         <div class="container">
             <div class="row"> <!--columnas-->
                 <div class="about-col-1">
-                    <img src="img/lain (2).jpg">
+                    <img src="/img/me.jpg" class="logo">
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
-                    <p>Tengo 23 años y actualmente estoy estudiando una tecnicatura en programación. Cursé el programa "Codo a Codo - FullStack Python" en 2022 y estoy buscando
-                    el área en la que me quiero especializar. <br> En mi tiempo libre soy artista. </p>
+                    <h1 class="sub-title">/ about me</h1>
+                    <p>I'm a trainee data scientist from Buenos Aires, Argentina. I'm fascinated by visualization, AI and neuronal networks. Outside of work, I'm interested in science (videos or documentaries about black holes, time, planets). I also paint a lot and I make crafts with clay.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('courses')">Courses & Certifications</p>
                         <!--onclick es para que cuando nosotros apretamos despliegue el contenido, opentab es una mini funcioncita para esto que va a seguir los id correspondientes-->
                     </div>
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Front End</span><br> HTML, CSS, JS (actualmente aprendiendo Node.js)</li>
-                            <li><span>MySQL</span><br>Actualmente realizando un curso asincronico</li>
-                            <li><span>C</span><br>C básico para Arduino</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="experience">
-                        <ul>
-                            <li><span>2023 - presente</span><br>Artsci - blog website sobre arte y ciencia</li>
-                            <li><span>2023 - presente</span><br>Portfolio website</li>
-                            <li><span>2022</span><br>Proyecto grupal final para Codo a Codo</li>
+                            <li><span>Data Analysis</span><br> Excel, Google Analytics, detail-oriented, basic statistics (mean, median, mode, variance and standard deviation). </li>
+                            <li><span>Tools</span><br>Python (Pandas, Matplotlib, NumPy), MySQL, Tableau, Looker Studio (Google Data Studio).</li>
+                            <li><span>Additional Tools</span><br>TensorFlow, IBM Watson Studio (basic knowledge), Google Colab. Currently learning R and Apache Hadoop. </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2023 - presente</span><br>Tecnicatura en Programación Informática - UNSAM</li>
+                            <li><span>2024 - in progress</span><br>Bachelor's Degree in Computer Science - UBA XXI</li>
+                            <li><span>2023 - 2024</span><br>Technical Degree in Computer Programming (first year) - UNSAM</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="courses">
+                        <ul>
+                            <li><span>Course | 2024 - present</span><br>Big Data - Codo a Codo 4.0</li>
+                            <li><span>Certification | 2024 </span><br>IBM Data Fundamentals</li>
+                            <li><span>Certification | 2024 </span><br>IBM Agile Explorer</li>
+                            <li><span>Certification | 2024 </span><br>IBM Explore Emerging Tech</li>
+                            <li><span>Course | 2022 </span><br>Full Stack Python - Codo a Codo 4.0</li>
                         </ul>
                     </div>
                 </div> 
@@ -76,75 +79,74 @@
         </div>
     </div>
 
-    <!-----------------services------------------>
-    <div id="services">
+    <!-----------------pet projects------------------>
+    <div id="pet-projects">
         <div class="container">
-            <h1 class="sub-title">My Services</h1>
-            <div class="services-list">
+            <h1 class="sub-title">/ pet projects</h1>
+            <div class="pet-projects-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>Amplia creatividad y capacidad para comprender el diseño que se desea y llevarlo a cabo.</p>
-                    <a href="#">Learn more</a>
+                    <h2>AI</h2>
+                    <p>Aca va el modelo predictivo con el link a Github <br> Tecnologias: bla, bla, bla</p>
+                    <a href="#">Link a Github</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Espacio para nuevos conocimientos</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, laudantium molestias cupiditate ab placeat temporibus, quam nostrum necessitatibus sunt tenetur, eaque sint sapiente sit quo in. Cumque neque nostrum asperiores.</p>
-                    <a href="#">Learn more</a>
+                    <h2>Visualization</h2>
+                    <p>Aca va un lindo Dashboard  interactivo que muestre el caso de estudio de Spotify de Brilliant</p>
+                    <a href="#">Link al Dashboard o al github con el dashboard</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Espacio para nuevos conocimientos</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum praesentium minima ipsam optio dolor laudantium. Mollitia iure expedita, repellat odio, distinctio eligendi, totam accusamus at dolorem molestiae possimus! Dolorem, quas.</p>
-                    <a href="#">Learn more</a>
+                    <h2>Art & Science</h2>
+                    <p>Aca iria un pequenio estudio acerca de como trabajar ambas partes del cerebro, logica y creativa, estudio de big data y predicciones de humor </p>
+                    <a href="#">Link al github</a>
                 </div>
             </div>
         </div>
     </div>
-    <!------------------portfolio--------------------->
-    <div id="portfolio">
+    <!------------------my work--------------------->
+    <!--- <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="img/Anime.jpg"><!--img 1-->
+                    <img src="img/Anime.jpg">///////img 1////////
                     <div class="layer">
                         <h3>Portfolio Website</h3>
                         <p>Este sitio me permite seguir practicando las tecnologías que voy aprendiendo e ir actualizándolo constantemente.</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a><!--external link icon-->
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>///////external link icon///////
                     </div>
                 </div>
                 <div class="work">
-                    <img src="img/Anime.jpg"><!--img 2-->
+                    <img src="img/Anime.jpg">//////img 2--><!--//////
                     <div class="layer">
                         <h3>Blog Website</h3>
                         <p>Un blog que conecta mis dos pasiones: arte y ciencia.</p>
-                        <a href="https://campineco.github.io/blogwebsite/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a><!--external link icon-->
+                        <a href="https://campineco.github.io/blogwebsite/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>/////external link icon/////
                     </div>
                 </div>
                 <div class="work">
-                    <img src="img/Anime.jpg"><!--img 3-->
+                    <img src="img/Anime.jpg">///////img 3/////////
                     <div class="layer">
                         <h3>Proyecto grupal final - Codo a Codo 2022</h3>
                         <p>Pequeño prototipo para emprendimiento personal de arte. Actualmente sin imágenes ya que la marca cambió de estética. Pendiente de actualización.</p>
-                        <a href="https://campineco.github.io/tpocodoacodo2022/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a><!--external link icon-->
+                        <a href="https://campineco.github.io/tpocodoacodo2022/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>//////external link icon//////
                     </div>
                 </div>
             </div>
             <a href="#" class="btn">Volver al inicio</a>
         </div>
-    </div>
+    </div> -->
     <!----------------------contact----------------------->
     <div id="contact">
         <div class="container">
             <!--va la info en dos columnas, una a la izquierda y otra a la derecha-->
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
+                    <h1 class="sub-title">/ contact me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i>rociocamilapineda@gmail.com</p>
                     <div class="social-icons">
-                        <a href="https://www.instagram.com/polar_canvas/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/camila-pineda-33073318b/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="img/IT - Español.pdf" download class="btn btn2">Download CV</a>
