arreglo de la imagen de about

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row"> <!--columnas-->
                 <div class="about-col-1">
-                    <img src="/img/me.jpg" class="logo">
+                    <img src="img/me.jpg" class="logo">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">/ about me</h1>
