nueva animacion y arreglo header-text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
             <div class="header-text">
                 <canvas id="canvas"></canvas> <!--animation canvas-->
-                <h1 id="welcome">hi,<span>camila</span> here.</h1>
+                <h1 id="welcome">hi, <span>camila</span> here.<span class = "blink">|</span></h1>
                
             </div>
         </div>
